Estructura de proyecto, login y refresh